testdata/cases/analyze/sort_non_slice.expected
testdata/cases/analyze/sort_non_slice.go:6:13: error[sort-non-slice]: sort.Slice requires a slice, but the argument has type [3]int
